--- a/src/Pin.CricketDarts.Server/Pages/Statistics.razor
+++ b/src/Pin.CricketDarts.Server/Pages/Statistics.razor
@@ -4,26 +4,34 @@
 
 @if (OngoingGames != null)
 {
-    <div class="mb-5"><h2><b><u>Current Ongoing Games</u></b></h2></div>
-    <div class="row row-cols-0 row-cols-md-2 d-flex justify-content-center mb-4">
-        <div class="container">
-            @foreach (var game in OngoingGames.CurrentOngoingGames)
-            {
-                <div class="mb-3">
-                    <div class="row">
-                        <div class="col">@game.Players[0].Name</div>
-                        <div class="col">vs</div>
-                        <div class="col">@game.Players[1].Name</div>
+    @if (OngoingGames.CurrentOngoingGames.Count() > 0)
+    {
+        <div class="mb-5"><h2><b><u>Current Ongoing Games</u></b></h2></div>
+        <div class="row row-cols-0 row-cols-md-2 d-flex justify-content-center mb-4">
+            <div class="container">
+                @foreach (var game in OngoingGames.CurrentOngoingGames)
+                {
+                    <div class="mb-3">
+                        <div class="row">
+                            <div class="col">@game.Players[0].Name</div>
+                            <div class="col">vs</div>
+                            <div class="col">@game.Players[1].Name</div>
+                        </div>
+                        <div class="row">
+                            <div class="col">Current score: <b>@game.Players[0].CurrentScore</b></div>
+                            <div class="col"></div>
+                            <div class="col">Current score: <b>@game.Players[1].CurrentScore</b></div>
+                        </div>
                     </div>
-                    <div class="row">
-                        <div class="col">Current score: <b>@game.Players[0].CurrentScore</b></div>
-                        <div class="col"></div>
-                        <div class="col">Current score: <b>@game.Players[1].CurrentScore</b></div>
-                    </div>
-                </div>
-            }
+                }
+            </div>
         </div>
-    </div>
+    }
+    else
+    {
+        <div class="mb-4">No ongoing games yet!</div>
+    }
+
 }
 @if (Players != null)
 {
@@ -31,16 +39,23 @@
     <div class="mb-4"><h4>Most won games</h4></div>
     <div class="row row-cols-0 row-cols-md-2 d-flex justify-content-center">
         <div class="container">
-            @for (int i = 0; i < Players.Count; i++)
+            @if (Players.Any(p => p.AmountWonGames > 0))
             {
-                @if (Players[i].AmountWonGames != 0)
+                @for (int i = 0; i < Players.Count; i++)
                 {
-                    <div class="mb-1">
-                        <div class="row">
-                            <div class="col">@(i + 1). @Players[i].Name: <b>@Players[i].AmountWonGames</b></div>
+                    @if (Players[i].AmountWonGames != 0)
+                    {
+                        <div class="mb-1">
+                            <div class="row">
+                                <div class="col">@(i + 1). @Players[i].Name: <b>@Players[i].AmountWonGames</b></div>
+                            </div>
                         </div>
-                    </div>
+                    }
                 }
+            }
+            else
+            {
+                <div class="mb-4">No winners yet!</div>
             }
         </div>
     </div>
@@ -48,18 +63,25 @@
     <div class="mb-4"><h4>Most triples</h4></div>
     <div class="row row-cols-0 row-cols-md-2 d-flex justify-content-center">
         <div class="container">
-            @foreach (var player in Players.OrderByDescending(p => p.TotalTriples))
+            @if (Players.Any(p => p.TotalTriples > 0))
             {
-                int i = 0;
-                @if (player.TotalTriples != 0)
+                @foreach (var player in Players.OrderByDescending(p => p.TotalTriples))
                 {
-                    <div class="mb-1">
-                        <div class="row">
-                            <div class="col">@(i + 1). @player.Name: <b>@player.TotalTriples</b></div>
+                    int i = 0;
+                    @if (player.TotalTriples != 0)
+                    {
+                        <div class="mb-1">
+                            <div class="row">
+                                <div class="col">@(i + 1). @player.Name: <b>@player.TotalTriples</b></div>
+                            </div>
                         </div>
-                    </div>
+                    }
+                    i++;
                 }
-                i++;
+            }
+            else
+            {
+                <div class="mb-4">No triple scorers yet!</div>
             }
         </div>
     </div>
@@ -67,18 +89,25 @@
     <div class="mb-4"><h4>Most doubles</h4></div>
     <div class="row row-cols-0 row-cols-md-2 d-flex justify-content-center">
         <div class="container">
-            @foreach (var player in Players.OrderByDescending(p => p.TotalDoubles))
+            @if (Players.Any(p => p.TotalDoubles > 0))
             {
-                int i = 0;
-                @if (player.TotalTriples != 0)
+                @foreach (var player in Players.OrderByDescending(p => p.TotalDoubles))
                 {
-                    <div class="mb-1">
-                        <div class="row">
-                            <div class="col">@(i + 1). @player.Name: <b>@player.TotalDoubles</b></div>
+                    int i = 0;
+                    @if (player.TotalTriples != 0)
+                    {
+                        <div class="mb-1">
+                            <div class="row">
+                                <div class="col">@(i + 1). @player.Name: <b>@player.TotalDoubles</b></div>
+                            </div>
                         </div>
-                    </div>
+                    }
+                    i++;
                 }
-                i++;
+            }
+            else
+            {
+                <div class="mb-4">No double scorers yet!</div>
             }
         </div>
     </div>
