--- a/src/Pin.CricketDarts.Server/Components/ScoreBoard.razor
+++ b/src/Pin.CricketDarts.Server/Components/ScoreBoard.razor
@@ -88,6 +88,10 @@
                     <div>The game has ended!</div>
                     <div>The winner is: @Winner.Name</div>
                 }
+                else
+                {
+                    <div>It's a tie!</div>
+                }
             </div>
         </div>
     </div>
