--- a/src/Pin.CricketDarts.Server/Pages/Games.razor
+++ b/src/Pin.CricketDarts.Server/Pages/Games.razor
@@ -5,6 +5,7 @@
 @inject IGameService gameService;
 
 <PageTitle>Tournament page</PageTitle>
+<Heading Head="Tournament"></Heading>
 <GamesOverview CurrentGames="CurrentGames"
                GenerateGames="GenerateGames"
                CurrentTournament="CurrentTournament"
