--- a/src/Pin.CricketDarts.Server/Pages/Index.razor
+++ b/src/Pin.CricketDarts.Server/Pages/Index.razor
@@ -2,6 +2,7 @@
 @inject IPlayerService playerService;
 @inject ITournamentService tournamentService;
 <PageTitle>Player Registration</PageTitle>
+<Heading Head="Player Registration"></Heading>
 <Registration OnSave="AddPlayer"
               TournamentIsFull="TournamentIsFull"
               SpacesLeft="SpacesLeft"
