--- a/src/Pin.CricketDarts.Server/Pages/SelectedGame.razor
+++ b/src/Pin.CricketDarts.Server/Pages/SelectedGame.razor
@@ -6,6 +6,7 @@
 @inject IStatisticsService statisticsService;
 
 <PageTitle>Scoreboard</PageTitle>
+<Heading Head="Scoreboard Page"></Heading>
 <ScoreBoard ActiveGame="ActiveGame"
             UpdateScoreBoard="UpdateScoreBoard"
             CurrentPlayer="CurrentPlayer"
