--- a/src/Pin.CricketDarts.Server/Shared/MainLayout.razor
+++ b/src/Pin.CricketDarts.Server/Shared/MainLayout.razor
@@ -6,12 +6,9 @@
     </div>
 
     <main>
-        <div class="top-row px-4">
 
-        </div>
-
-        <div class="content px-4 mx-auto text-center h-100">
-            @Body
+        <div class=" mx-auto">
+            <div class="text-center">@Body</div>
         </div>
     </main>
 </div>
