--- a/src/Pin.CricketDarts.Server/Pages/Statistics.razor
+++ b/src/Pin.CricketDarts.Server/Pages/Statistics.razor
@@ -31,6 +31,10 @@
                 </div>
             </div>
         }
+        else
+        {
+            <div class="mb-4">No ongoing games yet!</div>
+        }
     }
     else
     {
